# Copyright (c) 2018, NikitaFeodonit. All rights reserved.
#
## ICU build file for CMake build tools

set(lib_NAME ${ICULIBS_UC})
set(lib_NAME_SUFFIX ${COMMON_STUBNAME})

add_library(${lib_NAME} "")

set_target_properties(${lib_NAME} PROPERTIES EXPORT_NAME ${lib_NAME_SUFFIX})

### Common libraries options
include(${PROJECT_SOURCE_DIR}/common_icu_lib_flags.cmake)
include(${PROJECT_SOURCE_DIR}/common_icu_lib_includes.cmake)

### Library's specific flags
# PRIVATE flags
set_property(TARGET ${lib_NAME} APPEND PROPERTY
  COMPILE_DEFINITIONS ${CPPFLAGSICUUC}
    U_COMMON_IMPLEMENTATION
    # for plugin configuration
    DEFAULT_ICU_PLUGINS=\"${libdir}/icu\"
)
if(PKGDATA_MODE STREQUAL "common")
  set_property(TARGET ${lib_NAME} APPEND PROPERTY
    COMPILE_DEFINITIONS
      # for icu data location
      U_ICU_DATA_DEFAULT_DIR=\"${ICUDATA_DIR}\"
  )
endif()
if(MSVC)
  set_property(TARGET ${lib_NAME} APPEND PROPERTY
    COMPILE_DEFINITIONS U_PLATFORM_USES_ONLY_WIN32_API=1
  )
  if(ENABLE_DEBUG)
    set_property(TARGET ${lib_NAME} APPEND PROPERTY
      COMPILE_DEFINITIONS RBBI_DEBUG
    )
  endif()
endif()
set_property(TARGET ${lib_NAME} APPEND_STRING PROPERTY
  LINK_FLAGS ${LDFLAGSICUUC}
)

### Include directories
# PRIVATE
target_include_directories(${lib_NAME} PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}
)

### Link libraries
# PUBLIC
if(PKGDATA_MODE STREQUAL "common")
  target_link_libraries(${lib_NAME} PUBLIC ${ICULIBS_STUBDT})
else()
  # INSTALL_INTERFACE introduced to avoid cyclic dependency:
  # * icupkg -> icuuc -> icudata -> icupkg (generated by)
  # Build:
  # * icudata -> icupkg -> icuuc -> icustubdata
  # Usage:
  # * icuuc -> icudata
  target_link_libraries(${lib_NAME} PUBLIC
    $<BUILD_INTERFACE:${ICULIBS_STUBDT}>
    $<INSTALL_INTERFACE:${ICULIBS_DT}>
  )
endif()
# After ICULIBS_DT or ICULIBS_STUBDT
target_link_libraries(${lib_NAME} PUBLIC ${DEFAULT_LIBS})

target_sources(${lib_NAME}
  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/appendable.cpp
    ${CMAKE_CURRENT_LIST_DIR}/bmpset.cpp
    ${CMAKE_CURRENT_LIST_DIR}/brkeng.cpp
    ${CMAKE_CURRENT_LIST_DIR}/brkiter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/bytesinkutil.cpp
    ${CMAKE_CURRENT_LIST_DIR}/bytestream.cpp
    ${CMAKE_CURRENT_LIST_DIR}/bytestrie.cpp
    ${CMAKE_CURRENT_LIST_DIR}/bytestriebuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/bytestrieiterator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/caniter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/chariter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/charstr.cpp
    ${CMAKE_CURRENT_LIST_DIR}/cmemory.cpp
    ${CMAKE_CURRENT_LIST_DIR}/cstr.cpp
    ${CMAKE_CURRENT_LIST_DIR}/cstring.cpp
    ${CMAKE_CURRENT_LIST_DIR}/cwchar.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dictbe.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dictionarydata.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dtintrv.cpp
    ${CMAKE_CURRENT_LIST_DIR}/edits.cpp
    ${CMAKE_CURRENT_LIST_DIR}/errorcode.cpp
    ${CMAKE_CURRENT_LIST_DIR}/filteredbrk.cpp
    ${CMAKE_CURRENT_LIST_DIR}/filterednormalizer2.cpp
    ${CMAKE_CURRENT_LIST_DIR}/icudataver.cpp
    ${CMAKE_CURRENT_LIST_DIR}/icuplug.cpp
    ${CMAKE_CURRENT_LIST_DIR}/listformatter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/loadednormalizer2impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/locavailable.cpp
    ${CMAKE_CURRENT_LIST_DIR}/locbased.cpp
    ${CMAKE_CURRENT_LIST_DIR}/locdispnames.cpp
    ${CMAKE_CURRENT_LIST_DIR}/locdspnm.cpp
    ${CMAKE_CURRENT_LIST_DIR}/locid.cpp
    ${CMAKE_CURRENT_LIST_DIR}/loclikely.cpp
    ${CMAKE_CURRENT_LIST_DIR}/locmap.cpp
    ${CMAKE_CURRENT_LIST_DIR}/locresdata.cpp
    ${CMAKE_CURRENT_LIST_DIR}/locutil.cpp
    ${CMAKE_CURRENT_LIST_DIR}/messagepattern.cpp
    ${CMAKE_CURRENT_LIST_DIR}/normalizer2.cpp
    ${CMAKE_CURRENT_LIST_DIR}/normalizer2impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/normlzr.cpp
    ${CMAKE_CURRENT_LIST_DIR}/parsepos.cpp
    ${CMAKE_CURRENT_LIST_DIR}/patternprops.cpp
    ${CMAKE_CURRENT_LIST_DIR}/pluralmap.cpp
    ${CMAKE_CURRENT_LIST_DIR}/propname.cpp
    ${CMAKE_CURRENT_LIST_DIR}/propsvec.cpp
    ${CMAKE_CURRENT_LIST_DIR}/punycode.cpp
    ${CMAKE_CURRENT_LIST_DIR}/putil.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbbi_cache.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbbi.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbbidata.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbbinode.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbbirb.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbbiscan.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbbisetb.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbbistbl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbbitblb.cpp
    ${CMAKE_CURRENT_LIST_DIR}/resbund_cnv.cpp
    ${CMAKE_CURRENT_LIST_DIR}/resbund.cpp
    ${CMAKE_CURRENT_LIST_DIR}/resource.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ruleiter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/schriter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/serv.cpp
    ${CMAKE_CURRENT_LIST_DIR}/servlk.cpp
    ${CMAKE_CURRENT_LIST_DIR}/servlkf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/servls.cpp
    ${CMAKE_CURRENT_LIST_DIR}/servnotf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/servrbf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/servslkf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/sharedobject.cpp
    ${CMAKE_CURRENT_LIST_DIR}/simpleformatter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/stringpiece.cpp
    ${CMAKE_CURRENT_LIST_DIR}/stringtriebuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uarrsort.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ubidi_props.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ubidi.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ubidiln.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ubiditransform.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ubidiwrt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ubrk.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucase.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucasemap_titlecase_brkiter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucasemap.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucat.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uchar.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucharstrie.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucharstriebuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucharstrieiterator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uchriter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucln_cmn.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucmndata.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_bld.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_cb.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_cnv.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_ct.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_err.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_ext.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_io.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_lmb.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_set.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_u16.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_u32.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_u7.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_u8.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnv2022.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnvbocu.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnvdisp.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnvhz.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnvisci.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnvlat1.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnvmbcs.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnvscsu.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucnvsel.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucol_swp.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucurr.cpp
    ${CMAKE_CURRENT_LIST_DIR}/udata.cpp
    ${CMAKE_CURRENT_LIST_DIR}/udatamem.cpp
    ${CMAKE_CURRENT_LIST_DIR}/udataswp.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uenum.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uhash_us.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uhash.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uidna.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uinit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uinvchar.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uiter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ulist.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ulistformatter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uloc_keytype.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uloc_tag.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uloc.cpp
    ${CMAKE_CURRENT_LIST_DIR}/umapfile.cpp
    ${CMAKE_CURRENT_LIST_DIR}/umath.cpp
    ${CMAKE_CURRENT_LIST_DIR}/umutex.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unames.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unifiedcache.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unifilt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unifunct.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uniset_closure.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uniset_props.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uniset.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unisetspan.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unistr_case_locale.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unistr_case.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unistr_cnv.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unistr_props.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unistr_titlecase_brkiter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unistr.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unorm.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unormcmp.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uobject.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uprops.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ures_cnv.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uresbund.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uresdata.cpp
    ${CMAKE_CURRENT_LIST_DIR}/usc_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uscript_props.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uscript.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uset_props.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uset.cpp
    ${CMAKE_CURRENT_LIST_DIR}/usetiter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ushape.cpp
    ${CMAKE_CURRENT_LIST_DIR}/usprep.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ustack.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ustr_cnv.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ustr_titlecase_brkiter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ustr_wcs.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ustrcase_locale.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ustrcase.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ustrenum.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ustrfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ustring.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ustrtrns.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utext.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utf_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/util_props.cpp
    ${CMAKE_CURRENT_LIST_DIR}/util.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utrace.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utrie.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utrie2_builder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utrie2.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uts46.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utypes.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uvector.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uvectr32.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uvectr64.cpp
    ${CMAKE_CURRENT_LIST_DIR}/wintz.cpp

  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/bmpset.h
    ${CMAKE_CURRENT_LIST_DIR}/brkeng.h
    ${CMAKE_CURRENT_LIST_DIR}/bytesinkutil.h
    ${CMAKE_CURRENT_LIST_DIR}/charstr.h
    ${CMAKE_CURRENT_LIST_DIR}/cmemory.h
    ${CMAKE_CURRENT_LIST_DIR}/cpputils.h
    ${CMAKE_CURRENT_LIST_DIR}/cstr.h
    ${CMAKE_CURRENT_LIST_DIR}/cstring.h
    ${CMAKE_CURRENT_LIST_DIR}/cwchar.h
    ${CMAKE_CURRENT_LIST_DIR}/dictbe.h
    ${CMAKE_CURRENT_LIST_DIR}/dictionarydata.h
    ${CMAKE_CURRENT_LIST_DIR}/hash.h
    ${CMAKE_CURRENT_LIST_DIR}/icuplugimp.h
    ${CMAKE_CURRENT_LIST_DIR}/localsvc.h
    ${CMAKE_CURRENT_LIST_DIR}/locbased.h
    ${CMAKE_CURRENT_LIST_DIR}/locmap.h
    ${CMAKE_CURRENT_LIST_DIR}/locutil.h
    ${CMAKE_CURRENT_LIST_DIR}/messageimpl.h
    ${CMAKE_CURRENT_LIST_DIR}/msvcres.h
    ${CMAKE_CURRENT_LIST_DIR}/mutex.h
    ${CMAKE_CURRENT_LIST_DIR}/norm2allmodes.h
    ${CMAKE_CURRENT_LIST_DIR}/norm2_nfc_data.h
    ${CMAKE_CURRENT_LIST_DIR}/normalizer2impl.h
    ${CMAKE_CURRENT_LIST_DIR}/patternprops.h
    ${CMAKE_CURRENT_LIST_DIR}/pluralmap.h
    ${CMAKE_CURRENT_LIST_DIR}/propname_data.h
    ${CMAKE_CURRENT_LIST_DIR}/propname.h
    ${CMAKE_CURRENT_LIST_DIR}/propsvec.h
    ${CMAKE_CURRENT_LIST_DIR}/punycode.h
    ${CMAKE_CURRENT_LIST_DIR}/putilimp.h
    ${CMAKE_CURRENT_LIST_DIR}/rbbi_cache.h
    ${CMAKE_CURRENT_LIST_DIR}/rbbidata.h
    ${CMAKE_CURRENT_LIST_DIR}/rbbinode.h
    ${CMAKE_CURRENT_LIST_DIR}/rbbirb.h
    ${CMAKE_CURRENT_LIST_DIR}/rbbirpt.h
    ${CMAKE_CURRENT_LIST_DIR}/rbbiscan.h
    ${CMAKE_CURRENT_LIST_DIR}/rbbisetb.h
    ${CMAKE_CURRENT_LIST_DIR}/rbbitblb.h
    ${CMAKE_CURRENT_LIST_DIR}/resource.h
    ${CMAKE_CURRENT_LIST_DIR}/ruleiter.h
    ${CMAKE_CURRENT_LIST_DIR}/serv.h
    ${CMAKE_CURRENT_LIST_DIR}/servloc.h
    ${CMAKE_CURRENT_LIST_DIR}/servnotf.h
    ${CMAKE_CURRENT_LIST_DIR}/sharedobject.h
    ${CMAKE_CURRENT_LIST_DIR}/sprpimpl.h
    ${CMAKE_CURRENT_LIST_DIR}/uarrsort.h
    ${CMAKE_CURRENT_LIST_DIR}/uassert.h
    ${CMAKE_CURRENT_LIST_DIR}/ubidiimp.h
    ${CMAKE_CURRENT_LIST_DIR}/ubidi_props_data.h
    ${CMAKE_CURRENT_LIST_DIR}/ubidi_props.h
    ${CMAKE_CURRENT_LIST_DIR}/ubrkimpl.h
    ${CMAKE_CURRENT_LIST_DIR}/ucase.h
    ${CMAKE_CURRENT_LIST_DIR}/ucasemap_imp.h
    ${CMAKE_CURRENT_LIST_DIR}/ucase_props_data.h
    ${CMAKE_CURRENT_LIST_DIR}/uchar_props_data.h
    ${CMAKE_CURRENT_LIST_DIR}/ucln_cmn.h
    ${CMAKE_CURRENT_LIST_DIR}/ucln.h
    ${CMAKE_CURRENT_LIST_DIR}/ucln_imp.h
    ${CMAKE_CURRENT_LIST_DIR}/ucmndata.h
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_bld.h
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_cnv.h
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_ext.h
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_imp.h
    ${CMAKE_CURRENT_LIST_DIR}/ucnv_io.h
    ${CMAKE_CURRENT_LIST_DIR}/ucnvmbcs.h
    ${CMAKE_CURRENT_LIST_DIR}/ucol_data.h
    ${CMAKE_CURRENT_LIST_DIR}/ucol_swp.h
    ${CMAKE_CURRENT_LIST_DIR}/ucurrimp.h
    ${CMAKE_CURRENT_LIST_DIR}/udatamem.h
    ${CMAKE_CURRENT_LIST_DIR}/udataswp.h
    ${CMAKE_CURRENT_LIST_DIR}/uelement.h
    ${CMAKE_CURRENT_LIST_DIR}/uenumimp.h
    ${CMAKE_CURRENT_LIST_DIR}/uhash.h
    ${CMAKE_CURRENT_LIST_DIR}/uinvchar.h
    ${CMAKE_CURRENT_LIST_DIR}/ulist.h
    ${CMAKE_CURRENT_LIST_DIR}/ulocimp.h
    ${CMAKE_CURRENT_LIST_DIR}/umapfile.h
    ${CMAKE_CURRENT_LIST_DIR}/umutex.h
    ${CMAKE_CURRENT_LIST_DIR}/unifiedcache.h
    ${CMAKE_CURRENT_LIST_DIR}/unisetspan.h
    ${CMAKE_CURRENT_LIST_DIR}/unistrappender.h
    ${CMAKE_CURRENT_LIST_DIR}/unormimp.h
    ${CMAKE_CURRENT_LIST_DIR}/uposixdefs.h
    ${CMAKE_CURRENT_LIST_DIR}/uprops.h
    ${CMAKE_CURRENT_LIST_DIR}/uresdata.h
    ${CMAKE_CURRENT_LIST_DIR}/uresimp.h
    ${CMAKE_CURRENT_LIST_DIR}/ureslocs.h
    ${CMAKE_CURRENT_LIST_DIR}/usc_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/uset_imp.h
    ${CMAKE_CURRENT_LIST_DIR}/ustr_cnv.h
    ${CMAKE_CURRENT_LIST_DIR}/ustrenum.h
    ${CMAKE_CURRENT_LIST_DIR}/ustrfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/ustr_imp.h
    ${CMAKE_CURRENT_LIST_DIR}/util.h
    ${CMAKE_CURRENT_LIST_DIR}/utracimp.h
    ${CMAKE_CURRENT_LIST_DIR}/utrie2.h
    ${CMAKE_CURRENT_LIST_DIR}/utrie2_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/utrie.h
    ${CMAKE_CURRENT_LIST_DIR}/utypeinfo.h
    ${CMAKE_CURRENT_LIST_DIR}/uvector.h
    ${CMAKE_CURRENT_LIST_DIR}/uvectr32.h
    ${CMAKE_CURRENT_LIST_DIR}/uvectr64.h
    ${CMAKE_CURRENT_LIST_DIR}/wintz.h

  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/unicode/appendable.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/brkiter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/bytestream.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/bytestriebuilder.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/bytestrie.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/caniter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/casemap.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/char16ptr.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/chariter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/dbbi.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/docmain.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/dtintrv.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/edits.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/enumset.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/errorcode.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/filteredbrk.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/icudataver.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/icuplug.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/idna.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/listformatter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/localpointer.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/locdspnm.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/locid.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/messagepattern.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/normalizer2.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/normlzr.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/parseerr.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/parsepos.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/platform.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ptypes.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/putil.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/rbbi.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/rep.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/resbund.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/schriter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/simpleformatter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/std_string.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/strenum.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/stringoptions.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/stringpiece.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/stringtriebuilder.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/symtable.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ubidi.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ubiditransform.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ubrk.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucasemap.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucat.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uchar.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucharstriebuilder.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucharstrie.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uchriter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uclean.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucnv_cb.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucnv_err.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucnv.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucnvsel.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uconfig.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucurr.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/udata.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/udisplaycontext.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uenum.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uidna.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uiter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uldnames.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ulistformatter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uloc.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/umachine.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/umisc.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/unifilt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/unifunct.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/unimatch.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uniset.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/unistr.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/unorm2.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/unorm.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uobject.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/urename.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/urep.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ures.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uscript.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uset.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/usetiter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ushape.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/usprep.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ustring.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ustringtrie.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/utext.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/utf16.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/utf32.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/utf8.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/utf.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/utf_old.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/utrace.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/utypes.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uvernum.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uversion.h
)

if(WINDOWS_STORE)
  set_source_files_properties(
    ${CMAKE_CURRENT_LIST_DIR}/wintz.cpp
    PROPERTIES
      HEADER_FILE_ONLY ON
  )
endif()

install(
  DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/unicode
  DESTINATION "${includedir}"
  FILES_MATCHING
  PATTERN "*.h"
)

install(
  TARGETS ${lib_NAME}
  EXPORT "${TARGETS_EXPORT_NAME}"
  ARCHIVE  DESTINATION "${libdir}"
  LIBRARY  DESTINATION "${libdir}"
  RUNTIME  DESTINATION "${bindir}"
  INCLUDES DESTINATION "${includedir}"
)
