# Copyright (c) 2018, NikitaFeodonit. All rights reserved.
#
## ICU build file for CMake build tools

set(lib_NAME ${ICULIBS_I18N})
set(lib_NAME_SUFFIX ${I18N_STUBNAME})

add_library(${lib_NAME} "")

set_target_properties(${lib_NAME} PROPERTIES EXPORT_NAME ${lib_NAME_SUFFIX})

### Common libraries options
include(${PROJECT_SOURCE_DIR}/common_icu_lib_flags.cmake)
include(${PROJECT_SOURCE_DIR}/common_icu_lib_includes.cmake)

### Library's specific flags
# PRIVATE flags
set_property(TARGET ${lib_NAME} APPEND PROPERTY
  COMPILE_DEFINITIONS ${CPPFLAGSICUI18N}
    U_I18N_IMPLEMENTATION
)
if(MSVC)
  if(WINDOWS_STORE)
    set_property(TARGET ${lib_NAME} APPEND PROPERTY
      COMPILE_DEFINITIONS U_PLATFORM_USES_ONLY_WIN32_API=1
    )
  endif()
endif()
set_property(TARGET ${lib_NAME} APPEND_STRING PROPERTY
  LINK_FLAGS ${LDFLAGSICUI18N}
)

### Include directories
# PRIVATE
target_include_directories(${lib_NAME} PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}
  ${PROJECT_SOURCE_DIR}/common
)

### Link libraries
# PUBLIC
# LIBS = $(LIBICUUC) $(DEFAULT_LIBS)
target_link_libraries(${lib_NAME} PUBLIC ${ICULIBS_UC})

target_sources(${lib_NAME}
  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/affixpatternparser.cpp
    ${CMAKE_CURRENT_LIST_DIR}/alphaindex.cpp
    ${CMAKE_CURRENT_LIST_DIR}/anytrans.cpp
    ${CMAKE_CURRENT_LIST_DIR}/astro.cpp
    ${CMAKE_CURRENT_LIST_DIR}/basictz.cpp
    ${CMAKE_CURRENT_LIST_DIR}/bocsu.cpp
    ${CMAKE_CURRENT_LIST_DIR}/brktrans.cpp
    ${CMAKE_CURRENT_LIST_DIR}/buddhcal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/calendar.cpp
    ${CMAKE_CURRENT_LIST_DIR}/casetrn.cpp
    ${CMAKE_CURRENT_LIST_DIR}/cecal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/chnsecal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/choicfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/coleitr.cpp
    ${CMAKE_CURRENT_LIST_DIR}/coll.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collation.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationbuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationcompare.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationdata.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationdatabuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationdatareader.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationdatawriter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationfastlatin.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationfastlatinbuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationfcd.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationiterator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationkeys.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationroot.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationrootelements.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationruleparser.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationsets.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationsettings.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationtailoring.cpp
    ${CMAKE_CURRENT_LIST_DIR}/collationweights.cpp
    ${CMAKE_CURRENT_LIST_DIR}/compactdecimalformat.cpp
    ${CMAKE_CURRENT_LIST_DIR}/coptccal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/cpdtrans.cpp
    ${CMAKE_CURRENT_LIST_DIR}/csdetect.cpp
    ${CMAKE_CURRENT_LIST_DIR}/csmatch.cpp
    ${CMAKE_CURRENT_LIST_DIR}/csr2022.cpp
    ${CMAKE_CURRENT_LIST_DIR}/csrecog.cpp
    ${CMAKE_CURRENT_LIST_DIR}/csrmbcs.cpp
    ${CMAKE_CURRENT_LIST_DIR}/csrsbcs.cpp
    ${CMAKE_CURRENT_LIST_DIR}/csrucode.cpp
    ${CMAKE_CURRENT_LIST_DIR}/csrutf8.cpp
    ${CMAKE_CURRENT_LIST_DIR}/curramt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/currfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/currpinf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/currunit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dangical.cpp
    ${CMAKE_CURRENT_LIST_DIR}/datefmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dayperiodrules.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dcfmtsym.cpp
    ${CMAKE_CURRENT_LIST_DIR}/decContext.cpp
    ${CMAKE_CURRENT_LIST_DIR}/decfmtst.cpp
    ${CMAKE_CURRENT_LIST_DIR}/decimalformatpattern.cpp
    ${CMAKE_CURRENT_LIST_DIR}/decimfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/decimfmtimpl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/decNumber.cpp
    ${CMAKE_CURRENT_LIST_DIR}/digitaffix.cpp
    ${CMAKE_CURRENT_LIST_DIR}/digitaffixesandpadding.cpp
    ${CMAKE_CURRENT_LIST_DIR}/digitformatter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/digitgrouping.cpp
    ${CMAKE_CURRENT_LIST_DIR}/digitinterval.cpp
    ${CMAKE_CURRENT_LIST_DIR}/digitlst.cpp
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-bignum-dtoa.cpp
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-bignum.cpp
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-cached-powers.cpp
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-diy-fp.cpp
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-fast-dtoa.cpp
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dtfmtsym.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dtitvfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dtitvinf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dtptngen.cpp
    ${CMAKE_CURRENT_LIST_DIR}/dtrule.cpp
    ${CMAKE_CURRENT_LIST_DIR}/esctrn.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ethpccal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/fmtable_cnv.cpp
    ${CMAKE_CURRENT_LIST_DIR}/fmtable.cpp
    ${CMAKE_CURRENT_LIST_DIR}/format.cpp
    ${CMAKE_CURRENT_LIST_DIR}/fphdlimp.cpp
    ${CMAKE_CURRENT_LIST_DIR}/fpositer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/funcrepl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/gender.cpp
    ${CMAKE_CURRENT_LIST_DIR}/gregocal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/gregoimp.cpp
    ${CMAKE_CURRENT_LIST_DIR}/hebrwcal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/indiancal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/inputext.cpp
    ${CMAKE_CURRENT_LIST_DIR}/islamcal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/japancal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/measfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/measunit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/measure.cpp
    ${CMAKE_CURRENT_LIST_DIR}/msgfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/name2uni.cpp
    ${CMAKE_CURRENT_LIST_DIR}/nfrs.cpp
    ${CMAKE_CURRENT_LIST_DIR}/nfrule.cpp
    ${CMAKE_CURRENT_LIST_DIR}/nfsubs.cpp
    ${CMAKE_CURRENT_LIST_DIR}/nortrans.cpp
    ${CMAKE_CURRENT_LIST_DIR}/nounit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/nultrans.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_affixutils.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_compact.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_decimalquantity.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_decimfmtprops.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_fluent.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_formatimpl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_grouping.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_integerwidth.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_longnames.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_modifiers.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_notation.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_padding.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_patternmodifier.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_patternstring.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_rounding.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_scientific.cpp
    ${CMAKE_CURRENT_LIST_DIR}/number_stringbuilder.cpp
    ${CMAKE_CURRENT_LIST_DIR}/numfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/numsys.cpp
    ${CMAKE_CURRENT_LIST_DIR}/olsontz.cpp
    ${CMAKE_CURRENT_LIST_DIR}/persncal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/pluralaffix.cpp
    ${CMAKE_CURRENT_LIST_DIR}/plurfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/plurrule.cpp
    ${CMAKE_CURRENT_LIST_DIR}/precision.cpp
    ${CMAKE_CURRENT_LIST_DIR}/quant.cpp
    ${CMAKE_CURRENT_LIST_DIR}/quantityformatter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbnf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbt_data.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbt_pars.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbt_rule.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbt_set.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rbtz.cpp
    ${CMAKE_CURRENT_LIST_DIR}/regexcmp.cpp
    ${CMAKE_CURRENT_LIST_DIR}/regeximp.cpp
    ${CMAKE_CURRENT_LIST_DIR}/regexst.cpp
    ${CMAKE_CURRENT_LIST_DIR}/regextxt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/region.cpp
    ${CMAKE_CURRENT_LIST_DIR}/reldatefmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/reldtfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rematch.cpp
    ${CMAKE_CURRENT_LIST_DIR}/remtrans.cpp
    ${CMAKE_CURRENT_LIST_DIR}/repattrn.cpp
    ${CMAKE_CURRENT_LIST_DIR}/rulebasedcollator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/scientificnumberformatter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/scriptset.cpp
    ${CMAKE_CURRENT_LIST_DIR}/search.cpp
    ${CMAKE_CURRENT_LIST_DIR}/selfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/sharedbreakiterator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/simpletz.cpp
    ${CMAKE_CURRENT_LIST_DIR}/smallintformatter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/smpdtfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/smpdtfst.cpp
    ${CMAKE_CURRENT_LIST_DIR}/sortkey.cpp
    ${CMAKE_CURRENT_LIST_DIR}/standardplural.cpp
    ${CMAKE_CURRENT_LIST_DIR}/strmatch.cpp
    ${CMAKE_CURRENT_LIST_DIR}/strrepl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/stsearch.cpp
    ${CMAKE_CURRENT_LIST_DIR}/taiwncal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/timezone.cpp
    ${CMAKE_CURRENT_LIST_DIR}/titletrn.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tmunit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tmutamt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tmutfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tolowtrn.cpp
    ${CMAKE_CURRENT_LIST_DIR}/toupptrn.cpp
    ${CMAKE_CURRENT_LIST_DIR}/translit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/transreg.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tridpars.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tzfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tzgnames.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tznames_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tznames.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tzrule.cpp
    ${CMAKE_CURRENT_LIST_DIR}/tztrans.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucal.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucln_in.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucol_res.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucol_sit.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucol.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucoleitr.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ucsdet.cpp
    ${CMAKE_CURRENT_LIST_DIR}/udat.cpp
    ${CMAKE_CURRENT_LIST_DIR}/udateintervalformat.cpp
    ${CMAKE_CURRENT_LIST_DIR}/udatpg.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ufieldpositer.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uitercollationiterator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ulocdata.cpp
    ${CMAKE_CURRENT_LIST_DIR}/umsg.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unesctrn.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uni2name.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unum.cpp
    ${CMAKE_CURRENT_LIST_DIR}/unumsys.cpp
    ${CMAKE_CURRENT_LIST_DIR}/upluralrules.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uregex.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uregexc.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uregion.cpp
    ${CMAKE_CURRENT_LIST_DIR}/usearch.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uspoof_build.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uspoof_conf.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uspoof_impl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/uspoof.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utf16collationiterator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utf8collationiterator.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utmscale.cpp
    ${CMAKE_CURRENT_LIST_DIR}/utrans.cpp
    ${CMAKE_CURRENT_LIST_DIR}/valueformatter.cpp
    ${CMAKE_CURRENT_LIST_DIR}/visibledigits.cpp
    ${CMAKE_CURRENT_LIST_DIR}/vtzone.cpp
    ${CMAKE_CURRENT_LIST_DIR}/vzone.cpp
    ${CMAKE_CURRENT_LIST_DIR}/windtfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/winnmfmt.cpp
    ${CMAKE_CURRENT_LIST_DIR}/wintzimpl.cpp
    ${CMAKE_CURRENT_LIST_DIR}/zonemeta.cpp
    ${CMAKE_CURRENT_LIST_DIR}/zrule.cpp
    ${CMAKE_CURRENT_LIST_DIR}/ztrans.cpp

  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/affixpatternparser.h
    ${CMAKE_CURRENT_LIST_DIR}/anytrans.h
    ${CMAKE_CURRENT_LIST_DIR}/astro.h
    ${CMAKE_CURRENT_LIST_DIR}/bocsu.h
    ${CMAKE_CURRENT_LIST_DIR}/brktrans.h
    ${CMAKE_CURRENT_LIST_DIR}/buddhcal.h
    ${CMAKE_CURRENT_LIST_DIR}/casetrn.h
    ${CMAKE_CURRENT_LIST_DIR}/cecal.h
    ${CMAKE_CURRENT_LIST_DIR}/chnsecal.h
    ${CMAKE_CURRENT_LIST_DIR}/collationbuilder.h
    ${CMAKE_CURRENT_LIST_DIR}/collationcompare.h
    ${CMAKE_CURRENT_LIST_DIR}/collationdatabuilder.h
    ${CMAKE_CURRENT_LIST_DIR}/collationdata.h
    ${CMAKE_CURRENT_LIST_DIR}/collationdatareader.h
    ${CMAKE_CURRENT_LIST_DIR}/collationdatawriter.h
    ${CMAKE_CURRENT_LIST_DIR}/collationfastlatinbuilder.h
    ${CMAKE_CURRENT_LIST_DIR}/collationfastlatin.h
    ${CMAKE_CURRENT_LIST_DIR}/collationfcd.h
    ${CMAKE_CURRENT_LIST_DIR}/collation.h
    ${CMAKE_CURRENT_LIST_DIR}/collationiterator.h
    ${CMAKE_CURRENT_LIST_DIR}/collationkeys.h
    ${CMAKE_CURRENT_LIST_DIR}/collationrootelements.h
    ${CMAKE_CURRENT_LIST_DIR}/collationroot.h
    ${CMAKE_CURRENT_LIST_DIR}/collationruleparser.h
    ${CMAKE_CURRENT_LIST_DIR}/collationsets.h
    ${CMAKE_CURRENT_LIST_DIR}/collationsettings.h
    ${CMAKE_CURRENT_LIST_DIR}/collationtailoring.h
    ${CMAKE_CURRENT_LIST_DIR}/collationweights.h
    ${CMAKE_CURRENT_LIST_DIR}/collunsafe.h
    ${CMAKE_CURRENT_LIST_DIR}/coptccal.h
    ${CMAKE_CURRENT_LIST_DIR}/cpdtrans.h
    ${CMAKE_CURRENT_LIST_DIR}/csdetect.h
    ${CMAKE_CURRENT_LIST_DIR}/csmatch.h
    ${CMAKE_CURRENT_LIST_DIR}/csr2022.h
    ${CMAKE_CURRENT_LIST_DIR}/csrecog.h
    ${CMAKE_CURRENT_LIST_DIR}/csrmbcs.h
    ${CMAKE_CURRENT_LIST_DIR}/csrsbcs.h
    ${CMAKE_CURRENT_LIST_DIR}/csrucode.h
    ${CMAKE_CURRENT_LIST_DIR}/csrutf8.h
    ${CMAKE_CURRENT_LIST_DIR}/currfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/dangical.h
    ${CMAKE_CURRENT_LIST_DIR}/dayperiodrules.h
    ${CMAKE_CURRENT_LIST_DIR}/dcfmtimp.h
    ${CMAKE_CURRENT_LIST_DIR}/decContext.h
    ${CMAKE_CURRENT_LIST_DIR}/decfmtst.h
    ${CMAKE_CURRENT_LIST_DIR}/decimalformatpattern.h
    ${CMAKE_CURRENT_LIST_DIR}/decimalformatpatternimpl.h
    ${CMAKE_CURRENT_LIST_DIR}/decimfmtimpl.h
    ${CMAKE_CURRENT_LIST_DIR}/decNumber.h
    ${CMAKE_CURRENT_LIST_DIR}/decNumberLocal.h
    ${CMAKE_CURRENT_LIST_DIR}/digitaffixesandpadding.h
    ${CMAKE_CURRENT_LIST_DIR}/digitaffix.h
    ${CMAKE_CURRENT_LIST_DIR}/digitformatter.h
    ${CMAKE_CURRENT_LIST_DIR}/digitgrouping.h
    ${CMAKE_CURRENT_LIST_DIR}/digitinterval.h
    ${CMAKE_CURRENT_LIST_DIR}/digitlst.h
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-bignum-dtoa.h
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-bignum.h
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-cached-powers.h
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-diy-fp.h
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-fast-dtoa.h
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion.h
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-ieee.h
    ${CMAKE_CURRENT_LIST_DIR}/double-conversion-utils.h
    ${CMAKE_CURRENT_LIST_DIR}/dt_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/dtitv_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/dtptngen_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/esctrn.h
    ${CMAKE_CURRENT_LIST_DIR}/ethpccal.h
    ${CMAKE_CURRENT_LIST_DIR}/fmtableimp.h
    ${CMAKE_CURRENT_LIST_DIR}/fphdlimp.h
    ${CMAKE_CURRENT_LIST_DIR}/funcrepl.h
    ${CMAKE_CURRENT_LIST_DIR}/gregoimp.h
    ${CMAKE_CURRENT_LIST_DIR}/hebrwcal.h
    ${CMAKE_CURRENT_LIST_DIR}/indiancal.h
    ${CMAKE_CURRENT_LIST_DIR}/inputext.h
    ${CMAKE_CURRENT_LIST_DIR}/islamcal.h
    ${CMAKE_CURRENT_LIST_DIR}/japancal.h
    ${CMAKE_CURRENT_LIST_DIR}/msgfmt_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/name2uni.h
    ${CMAKE_CURRENT_LIST_DIR}/nfrlist.h
    ${CMAKE_CURRENT_LIST_DIR}/nfrs.h
    ${CMAKE_CURRENT_LIST_DIR}/nfrule.h
    ${CMAKE_CURRENT_LIST_DIR}/nfsubs.h
    ${CMAKE_CURRENT_LIST_DIR}/nortrans.h
    ${CMAKE_CURRENT_LIST_DIR}/nultrans.h
    ${CMAKE_CURRENT_LIST_DIR}/number_affixutils.h
    ${CMAKE_CURRENT_LIST_DIR}/number_compact.h
    ${CMAKE_CURRENT_LIST_DIR}/number_decimalquantity.h
    ${CMAKE_CURRENT_LIST_DIR}/number_decimfmtprops.h
    ${CMAKE_CURRENT_LIST_DIR}/number_formatimpl.h
    ${CMAKE_CURRENT_LIST_DIR}/number_longnames.h
    ${CMAKE_CURRENT_LIST_DIR}/number_modifiers.h
    ${CMAKE_CURRENT_LIST_DIR}/number_patternmodifier.h
    ${CMAKE_CURRENT_LIST_DIR}/number_patternstring.h
    ${CMAKE_CURRENT_LIST_DIR}/number_roundingutils.h
    ${CMAKE_CURRENT_LIST_DIR}/number_scientific.h
    ${CMAKE_CURRENT_LIST_DIR}/number_stringbuilder.h
    ${CMAKE_CURRENT_LIST_DIR}/number_types.h
    ${CMAKE_CURRENT_LIST_DIR}/number_utils.h
    ${CMAKE_CURRENT_LIST_DIR}/numsys_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/olsontz.h
    ${CMAKE_CURRENT_LIST_DIR}/persncal.h
    ${CMAKE_CURRENT_LIST_DIR}/pluralaffix.h
    ${CMAKE_CURRENT_LIST_DIR}/plurrule_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/precision.h
    ${CMAKE_CURRENT_LIST_DIR}/quant.h
    ${CMAKE_CURRENT_LIST_DIR}/quantityformatter.h
    ${CMAKE_CURRENT_LIST_DIR}/rbt_data.h
    ${CMAKE_CURRENT_LIST_DIR}/rbt.h
    ${CMAKE_CURRENT_LIST_DIR}/rbt_pars.h
    ${CMAKE_CURRENT_LIST_DIR}/rbt_rule.h
    ${CMAKE_CURRENT_LIST_DIR}/rbt_set.h
    ${CMAKE_CURRENT_LIST_DIR}/regexcmp.h
    ${CMAKE_CURRENT_LIST_DIR}/regexcst.h
    ${CMAKE_CURRENT_LIST_DIR}/regeximp.h
    ${CMAKE_CURRENT_LIST_DIR}/regexst.h
    ${CMAKE_CURRENT_LIST_DIR}/regextxt.h
    ${CMAKE_CURRENT_LIST_DIR}/region_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/reldtfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/remtrans.h
    ${CMAKE_CURRENT_LIST_DIR}/scriptset.h
    ${CMAKE_CURRENT_LIST_DIR}/selfmtimpl.h
    ${CMAKE_CURRENT_LIST_DIR}/sharedbreakiterator.h
    ${CMAKE_CURRENT_LIST_DIR}/sharedcalendar.h
    ${CMAKE_CURRENT_LIST_DIR}/shareddateformatsymbols.h
    ${CMAKE_CURRENT_LIST_DIR}/sharednumberformat.h
    ${CMAKE_CURRENT_LIST_DIR}/sharedpluralrules.h
    ${CMAKE_CURRENT_LIST_DIR}/significantdigitinterval.h
    ${CMAKE_CURRENT_LIST_DIR}/smallintformatter.h
    ${CMAKE_CURRENT_LIST_DIR}/smpdtfst.h
    ${CMAKE_CURRENT_LIST_DIR}/standardplural.h
    ${CMAKE_CURRENT_LIST_DIR}/strmatch.h
    ${CMAKE_CURRENT_LIST_DIR}/strrepl.h
    ${CMAKE_CURRENT_LIST_DIR}/taiwncal.h
    ${CMAKE_CURRENT_LIST_DIR}/titletrn.h
    ${CMAKE_CURRENT_LIST_DIR}/tolowtrn.h
    ${CMAKE_CURRENT_LIST_DIR}/toupptrn.h
    ${CMAKE_CURRENT_LIST_DIR}/transreg.h
    ${CMAKE_CURRENT_LIST_DIR}/tridpars.h
    ${CMAKE_CURRENT_LIST_DIR}/tzgnames.h
    ${CMAKE_CURRENT_LIST_DIR}/tznames_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/ucln_in.h
    ${CMAKE_CURRENT_LIST_DIR}/ucol_imp.h
    ${CMAKE_CURRENT_LIST_DIR}/uitercollationiterator.h
    ${CMAKE_CURRENT_LIST_DIR}/umsg_imp.h
    ${CMAKE_CURRENT_LIST_DIR}/unesctrn.h
    ${CMAKE_CURRENT_LIST_DIR}/uni2name.h
    ${CMAKE_CURRENT_LIST_DIR}/uspoof_conf.h
    ${CMAKE_CURRENT_LIST_DIR}/uspoof_impl.h
    ${CMAKE_CURRENT_LIST_DIR}/usrchimp.h
    ${CMAKE_CURRENT_LIST_DIR}/utf16collationiterator.h
    ${CMAKE_CURRENT_LIST_DIR}/utf8collationiterator.h
    ${CMAKE_CURRENT_LIST_DIR}/valueformatter.h
    ${CMAKE_CURRENT_LIST_DIR}/visibledigits.h
    ${CMAKE_CURRENT_LIST_DIR}/vzone.h
    ${CMAKE_CURRENT_LIST_DIR}/windtfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/winnmfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/wintzimpl.h
    ${CMAKE_CURRENT_LIST_DIR}/zonemeta.h
    ${CMAKE_CURRENT_LIST_DIR}/zrule.h
    ${CMAKE_CURRENT_LIST_DIR}/ztrans.h

  PRIVATE
    ${CMAKE_CURRENT_LIST_DIR}/unicode/alphaindex.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/basictz.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/calendar.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/choicfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/coleitr.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/coll.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/compactdecimalformat.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/curramt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/currpinf.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/currunit.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/datefmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/dcfmtsym.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/decimfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/dtfmtsym.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/dtitvfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/dtitvinf.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/dtptngen.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/dtrule.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/fieldpos.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/fmtable.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/format.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/fpositer.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/gender.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/gregocal.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/measfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/measunit.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/measure.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/msgfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/nounit.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/numberformatter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/numfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/numsys.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/plurfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/plurrule.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/rbnf.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/rbtz.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/regex.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/region.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/reldatefmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/scientificnumberformatter.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/search.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/selfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/simpletz.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/smpdtfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/sortkey.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/stsearch.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/tblcoll.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/timezone.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/tmunit.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/tmutamt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/tmutfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/translit.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/tzfmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/tznames.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/tzrule.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/tztrans.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucal.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucoleitr.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucol.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ucsdet.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/udateintervalformat.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/udat.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/udatpg.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ufieldpositer.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uformattable.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ugender.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ulocdata.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/umsg.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/unirepl.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/unum.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/unumsys.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/upluralrules.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uregex.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uregion.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/ureldatefmt.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/usearch.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/uspoof.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/utmscale.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/utrans.h
    ${CMAKE_CURRENT_LIST_DIR}/unicode/vtzone.h
)

install(
  DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/unicode
  DESTINATION "${includedir}"
  FILES_MATCHING
  PATTERN "*.h"
)

install(
  TARGETS ${lib_NAME}
  EXPORT "${TARGETS_EXPORT_NAME}"
  ARCHIVE  DESTINATION "${libdir}"
  LIBRARY  DESTINATION "${libdir}"
  RUNTIME  DESTINATION "${bindir}"
  INCLUDES DESTINATION "${includedir}"
)
